--- a/portfolio/src/assets/scss/footer.scss
+++ b/portfolio/src/assets/scss/footer.scss
@@ -26,7 +26,7 @@
     display: inline-block;
     width: 2rem;
     height: 2rem;
-    background-color: #33383b;
+    background-color: $body-background;
     border-radius: 2px;
     font-size: 1.5rem;
     color: #fff;
