--- a/portfolio/src/assets/scss/projectlayout.scss
+++ b/portfolio/src/assets/scss/projectlayout.scss
@@ -3,7 +3,7 @@
     height: auto;
     margin: 80px 0;
     text-align: center;
-    border: 1px solid #ddd;
+    border: 1px solid $white;
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
   
@@ -13,7 +13,7 @@
     display: inline-block;
     margin-bottom: 40px;
     padding: 10px;
-    background: white;
+    background: $body-background;
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
   }
@@ -41,7 +41,7 @@
   }
 
   &:hover {
-      border-color: #00a8ff;
+      border-color: $white;
   }
   
   &:hover .service-icon-box {
